tests/baselines/reference/tsxAttributeResolution10.errors.txt
file.tsx(11,14): error TS2322: Type 'string' is not assignable to type 'boolean'.


==== react.d.ts (0 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
    	}
    	interface ElementAttributesProperty {
    		props;
    	}
    }
    
==== file.tsx (1 errors) ====
    export class MyComponent {  
      render() {
      }
    
      props: {
      	[s: string]: boolean;
      }
    }
    
    // Should be an error
    <MyComponent bar='world' />;
                 ~~~
!!! error TS2322: Type 'string' is not assignable to type 'boolean'.
!!! related TS6501 file.tsx:6:4: The expected type comes from this index signature.
    
    // Should be OK
    <MyComponent bar={true} />;
    
    // Should be ok
    <MyComponent data-bar='hello' />;
    